# SNANA

./: CMakeLists.txt
cmake/: Findcfitsio.cmake  Findgsl.cmake  snana_macros.cmake
util/: createCov.py
